--- a/shop/templates/shop/about.html
+++ b/shop/templates/shop/about.html
@@ -6,7 +6,8 @@
 
 <head>
   <title>Joy</title>
-  <link rel="stylesheet" href="templatestyle.css">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="stylesheet" href="https://yourdomain.com/public/css/style.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
@@ -32,27 +33,27 @@
     <div class="container-fluid menu" id="openMenu">
       <div class="row">
         <div class="col-2 text-center">
-          <a href="/shop"><i class= "fa fa-user fa-2x icon icon-1" aria-hidden="true"></i></a>
+          <a href="/"><i class= "fa fa-user fa-2x icon icon-1" aria-hidden="true"></i></a>
           <h5 class="txt txt-1">Research Project</h5>
         </div>
 
         <div class="col-2 text-center">
-          <a href="/shop/about"><i class="fa fa-graduation-cap fa-2x icon icon-2"  aria-hidden="true"></i></a>
+          <a href="/about"><i class="fa fa-graduation-cap fa-2x icon icon-2"  aria-hidden="true"></i></a>
           <h5 class="txt txt-2">Profile</h5>
         </div>
 
         <div class="col-2 text-center">
-          <a href="#"><i class="fa fa-certificate fa-2x icon icon-3" aria-hidden="true"></i></a>
+          <a href="/about"><i class="fa fa-certificate fa-2x icon icon-3" aria-hidden="true"></i></a>
           <h5 class="txt txt-3">Certificates</h5>
         </div>
 
         <div class="col-2 text-center">
-          <a href="#"><i class="fa fa-book fa-2x icon icon-4" aria-hidden="true"></i></a>
+          <a href="/about"><i class="fa fa-book fa-2x icon icon-4" aria-hidden="true"></i></a>
           <h5 class="txt txt-4">Teaching Activities</h5>
         </div>
 
         <div class="col-2 text-center">
-          <a href="#"> <i class="fa fa-envelope fa-2x icon icon-5" aria-hidden="true"></i></a>
+          <a href="/about"> <i class="fa fa-envelope fa-2x icon icon-5" aria-hidden="true"></i></a>
           <h5 class="txt txt-6">Messages</h5>
         </div>
       </div>
